--- a/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
@@ -23,7 +23,7 @@
 	<script src="https://xyz.api.here.com/maps/latest/xyz-maps-display.min.js" type="text/javascript"
 		charset="UTF-8"></script>
 
-	<script src="./js/app.js" type="text/javascript" charset="UTF-8"></script>
+	<!--<script src="./js/app.js" type="text/javascript" charset="UTF-8"></script>-->
 </body>
 
 </html>
