f_here_map: image capture activity added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
@@ -11,7 +11,7 @@
 	<div id="map"></div>
 	<div id="placeMarker"></div>
 	<div id="controls">
-		<a id="addPlace" class="button">Add Place</a>
+		<a id="addPlace" class="button" style="visibility: hidden;">Add Place</a>
 		<a id="savePlace" class="button">Save Place</a>
 	</div>
 
