f_here_map: recommended changes done, working on restrict map area

--- a/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/assets/here/index.html
@@ -23,6 +23,11 @@
 	<script src="https://xyz.api.here.com/maps/latest/xyz-maps-display.min.js" type="text/javascript"
 		charset="UTF-8"></script>
 
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+	<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+
 	<!--<script src="./js/app.js" type="text/javascript" charset="UTF-8"></script>-->
 </body>
 
